What's new in PyObjC
====================

An overview of the relevant changes in new, and older, releases.

Version 3.0
-----------

   The 3.0 branch is currently highly experimental, don't uses this version!

* The *__typestr__* attribute of opaque pointer types is now a byte string,
  in previous versions this was an instance of :class:`str` (this only affects
  Python 3 support)

* The JavaScriptCore bindings (in pyobjc-framework-WebKit) are now more usable
  because types like "JSValueRef" are now exposed to Python (they were missing
  due to incomplete metadata).

* Exclude a number of keys from the metadata dictionary when they have the
  default value (in the result from the *__metadata__()* method on methods
  and functions)

* The "lazy" modules used by framework wrappers now always have a ``__loader__``
  attribute (as required by PEP 302). The value can be :data:`None` when there
  is no explicit loader (such as when importing from the filesystem in Python 3.2
  or earlier).

* Method (and function) metadata is stored in a more compact manner, reducing the
  memory use of PyObjC applications.

* Removed support for hiding "protected" methods, :func:`objc.setHideProtected` is gone,
  it complicated the code without real advantages.

  Reasons for this:

  * There were some conflicts because a class implemented two selectors that caused
    the same python method to be added to the class *__dict__*. Which one was added
    was basicly random.

  * The functionality required PyObjC to maintain a full *__dict__* for classes, even
    when most Cocoa methods were never called. Ensuring that the contents of *__dict__*
    is correct in the face of Objective-C categories and class patches required some
    *very* expensive code.

  As a side effect of this some classes may no longer have the convenience methods they
  had in earlier releases (in particular classes that are not mentioned in Apple's
  documentation).
